// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`summarize bot basic cases 1 summary part, 1 points 1`] = `
[
  {
    "message": "⚙️ Собираю сообщения за последний день...",
  },
  {
    "message": "🔡 Краткая выжимка:",
  },
  {
    "message": 
"Dummy response on Сделай краткую выжимку этих сообщений на русском языке. В конце выжимки поставь подходящие по смыслу emoji вместо точки:
dev: 0
dev: 1
dev: 2"
,
  },
  {
    "message": 
"😌 Это всё
🔋 У вас осталось 2 из 3 бесплатных выжимок на этой неделе (⚡️ увеличить лимит)"
,
  },
]
`;

exports[`summarize bot basic cases 1 summary part, 2 points 1`] = `
[
  {
    "message": "⚙️ Собираю сообщения за последний день...",
  },
  {
    "message": "🔡 Краткая выжимка:",
  },
  {
    "message": 
"Dummy response on Сделай краткую выжимку этих сообщений в виде 2 пунктов идущих в хронологическом порядке. Каждый пункт - одно предложение на русском языке с подходящим по смыслу emoji в конце без точки:
dev: 01234
dev: 12345
dev: 23456"
,
  },
  {
    "message": 
"😌 Это всё
🔋 У вас осталось 2 из 3 бесплатных выжимок на этой неделе (⚡️ увеличить лимит)"
,
  },
]
`;

exports[`summarize bot basic cases 1 summary part, 3 points 1`] = `
[
  {
    "message": "⚙️ Собираю сообщения за последний день...",
  },
  {
    "message": "🔡 Краткая выжимка:",
  },
  {
    "message": 
"Dummy response on Сделай краткую выжимку этих сообщений в виде 3 пунктов идущих в хронологическом порядке. Каждый пункт - одно предложение на русском языке с подходящим по смыслу emoji в конце без точки:
dev: 012345678901
dev: 123456789012
dev: 234567890123"
,
  },
  {
    "message": 
"😌 Это всё
🔋 У вас осталось 2 из 3 бесплатных выжимок на этой неделе (⚡️ увеличить лимит)"
,
  },
]
`;

exports[`summarize bot basic cases 1 summary part, 4 points 1`] = `
[
  {
    "message": "⚙️ Собираю сообщения за последний день...",
  },
  {
    "message": "🔡 Краткая выжимка:",
  },
  {
    "message": 
"Dummy response on Сделай краткую выжимку этих сообщений в виде 4 пунктов идущих в хронологическом порядке. Каждый пункт - одно предложение на русском языке с подходящим по смыслу emoji в конце без точки:
dev: 0123456789012345678
dev: 1234567890123456789
dev: 2345678901234567890"
,
  },
  {
    "message": 
"😌 Это всё
🔋 У вас осталось 2 из 3 бесплатных выжимок на этой неделе (⚡️ увеличить лимит)"
,
  },
]
`;

exports[`summarize bot basic cases 1 summary part, 5 points 1`] = `
[
  {
    "message": "⚙️ Собираю сообщения за последний день...",
  },
  {
    "message": "🔡 Краткая выжимка:",
  },
  {
    "message": 
"Dummy response on Сделай краткую выжимку этих сообщений в виде 5 пунктов идущих в хронологическом порядке. Каждый пункт - одно предложение на русском языке с подходящим по смыслу emoji в конце без точки:
dev: 0123456789012345678901234
dev: 1234567890123456789012345
dev: 2345678901234567890123456"
,
  },
  {
    "message": 
"😌 Это всё
🔋 У вас осталось 2 из 3 бесплатных выжимок на этой неделе (⚡️ увеличить лимит)"
,
  },
]
`;
